Finalizando com alteração visual

--- a/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -16,12 +16,11 @@
 
 <h:body>
 	<header>
-		<h:graphicImage library="algaworks" name="logo.png"/>
-	</header>
+S	</header>
 	
-	<h2>
+	<h1>
 		<ui:insert name="titulo"/>
-	</h2>
+	</h1>
 
 	<div id="conteudo">
 		<ui:insert name="conteudo" />
