--- a/src/main/webapp/resources/algaworks/estilo.css
+++ b/src/main/webapp/resources/algaworks/estilo.css
@@ -10,8 +10,8 @@ body {
 header {
 	padding: 5px;
 	margin-bottom: 20px;
-	height: 30px;
-	background-color: #545454;
+	height: 48px;
+	background-color: #6495ED;
 	color: #fff;
 	box-shadow: 0px 2px 2px #ccc
 }
@@ -31,6 +31,27 @@ h1 {
 	font-size: 24px;
 	font-weight: 500;
 	padding: 0px;
-	margin: 0px;
+	margin: 30px;
 	margin-bottom: 10px
+}
+
+#frm {
+    margin: 20px; /* Adicione a margem desejada */
+}
+
+#toolbar {
+    margin-bottom: 20px; /* Adicione a margem desejada */
+}
+
+#toolbar .ui-toolbar-group .ui-button {
+    margin-right: 10px; /* Adicione a margem desejada */
+}
+
+#empresaPanelGrid {
+    padding: 10px; /* Adicione o espaçamento interno desejado */
+}
+
+.ui-datatable th,
+.ui-datatable td {
+    padding: 10px; /* Adicione o espaçamento interno desejado */
 }
